# orchid

./: .gitignore  README.md  TODO.md  config-example.yaml  config.example.yaml  main.py  pyproject.toml
src/orchid/: archive.py  cli.py  config.py  constants.py  disk.py  job.py  loader.py  log.py  manager.py  plot_keys.py  scheduler.py  state.py
src/tui/: app.py  app.tcss  setup.py
